# cortex-know-when-to-stop-training-model

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: data_contribution.md
.github/workflows/: validate_data.yml
data/seed/: beam.jsonl
scripts/: denoise_analysis.py  denoise_audit.py  denoise_bge.py  export_onnx.py  generate_seed_data.py  train_mlx.py  train_torch.py  train_v2.py  validate_data.py
src/cortex_abstention/: __init__.py  classifier.py  model_hub.py
src/cortex_beam_abstain/: __init__.py  classifier.py  heuristic.py  model_hub.py
tests/: test_classifier.py  test_heuristic.py
