[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-abstention"
version = "0.1.0"
description = "Community-trained retrieval abstention classifier — teaches RAG to say 'I don't know'"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = ["rag", "retrieval", "abstention", "nli", "beam", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "tokenizers>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/cdeust/cortex-abstention"
Repository = "https://github.com/cdeust/cortex-abstention"

[project.optional-dependencies]
mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.4.0",
    "transformers>=4.36.0",
]
torch = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
all = [
    "cortex-abstention[mlx,torch,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_abstention"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
